--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,43 @@
-o       -       extend the application to support the display and creation of an additional type of data besides "todo" items.
+    A. Three datasets. During this week, you are asked to extend the application to support the 
+ x      display,
+ x      creation,
+        and editing of a minimum of three datasets:
 
-o       -       Your new data must include at least 
-                        two user-entered fields of data in the app,
-                        must be stored in Firestore as a single collection,
-                        related to the user through the use of a field in each Firestore document that stores the unique ID for the associated user.
+ x      To Do Items (with a minimum of one user-entered field)
+ x      Events (with a minimum of two user-entered fields)
+ x      Contacts (with a minimum of four user-entered fields)
+    B. Data relationships. You are also asked to conform the data model approach that all of the datasets use, choosing from the following architectural patterns:
+        Single Firestore collection for each user, with a sub-collection for each dataset (to-dos, events, contacts). Or instead of using sub-collections, include a "type" field in each document that identifies the dataset. In this architecture, the collection ID is set to match the user ID, establishing a relationship between users and collections.
+x       Separate Firestore collection for each dataset (to-dos, events, contacts), with each document containing a field set to match the user ID, establishing a relationship between users and documents.
+    C. Full CRUD support. Your final full-stack app must support all four common data operations for each document in the Firestore database. These data operations include:
 
-o       -       Work locally in your own development environment. You can run your application from the terminal in VS Code directly.
-                Only use a Repl.it workspace to deploy your final fileset. The app may not run in Repl.it due to server resource constraints.
-                Manage your application's code using a GitHub repository and git from your workspace shell's command-line interface.
+x       Create: user must have the ability to create new documents in each dataset.
+x       Retrieve: application must retrieve and display documents in each dataset.
+x       Update: user must have the ability to edit the fields of each existing document.
+x       Delete: user must have the ability to delete individual documents.
+    D. Responsive and accessible user interface. You are asked to more fully utilize the
+       Chakra UI React component library to implement a consistent user interface for your
+       entire full-stack application that is both responsive and accessible.
 
-o       -       The finished app should use server-side rendering and dynamic page routing to support the display of a single document's data from
-                the new Firestore collection you create.
-x       -       It is not required to deploy this assignment to Vercel.
+x   E.  Re-factor app to ensure security of Firebase secrets. The original v9 tutorial left the Firebase credentials
+        embedded in a project file that was managed by git and therefore checked into the GitHub repository. This is
+        not a secure practice. It is important to conceal and protect the Firebase credentials, which should be stored
+        in a file that is not be part of the git repository.
+
+    F. Work locally. Use a local development environment to develop your creation.
+       Manage your application's code using a GitHub repository and git from your workspace shell's command-line interface.
+       Copy all project files once completed to your team Repl.it workspace as well.
+
+    G. Deploy finished app to Vercel. The finished app should be deployed to Vercel.
+============================================================================================
+o       -   extend the application to support the display and creation of 3 unique data sets
+            -   todo
+            -   events
+            -   contacts
+o       -   each data set should haver userID
+o       -   full CRUD support
+o       -   responsive and accessible UI
+o       -   refactor app to ensure security
+o       -   work locally
+o       -   deploy to Vercel
+o       -   USE chakra NAVBAR
